# htmap

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTORS  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  codecov.yml  condor_config.docker_image  condormap.py  covtest.py  dr  dr.cmd  looping.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  requirements_dev.txt  requirements_docs.txt  run.py  run.sh  setup.cfg  setup.py  smoke.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: pre-commit.yml  tests.yml
binder/: Dockerfile  condor_config.local  edit.sh  entrypoint.sh  exec.sh  find_notebooks  run.sh  start-htcondor.sh  test  test.cmd  test.sh
docker/: .htmaprc  Dockerfile  condor_config.local  entrypoint.sh  install-htcondor.sh  start-htcondor.sh
docs/: Makefile  autobuild  autobuild.sh  make.bat  requirements.txt
docs/source/: api.rst  cli.rst  conf.py  dependencies.rst  devs.rst  faq.rst  htcondor.rst  index.rst  innards.rst  installation.rst  recipes.rst  settings.rst  tips-and-tricks.rst  tutorial.rst  tutorials.rst  version-history.rst
examples/: checkpointing.py  htmap.ipynb
examples/quickstart/: quickstart.py
htcmap/: __init__.py  exceptions.py  htcio.py  htcmap.py  mapper.py  settings.py  utils.py
htcmap/run/: run.py  run.sh
htmap/: __init__.py  __main__.py  _startup.py  checkpointing.py  cli.py  condor.py  errors.py  exceptions.py  holds.py  htio.py  management.py  mapped.py  mapper.py  mapping.py  maps.py  names.py  options.py  output_files.py  result.py  settings.py  shortcuts.py  state.py  tags.py  transfer.py  transfer_input.py  transfer_output.py  types.py  utils.py  version.py
htmap-exec/: Dockerfile
htmap/run/: _htmap_run.py  _htmap_run.sh  _htmap_run_with_transplant.sh  _htmap_transfer_plugin.py  run.bat  run.py  run.sh  run_with_singularity.sh  run_with_transplant.sh
tests/: ci.sh  conftest.py  mock_classad.py  mock_htcondor.py  test_dotmap.py  test_ephemeral_maps.py  test_error_handling.py  test_execute_environment.py  test_force_map.py  test_htcmap_decorator.py  test_htmap.py  test_htmap_decorator.py  test_invalid_map_id.py  test_job_builder_with_mock_htcondor.py  test_management.py  test_map_actions.py  test_map_builder.py  test_map_builder_with_mock_htcondor.py  test_map_failure.py  test_map_or_recover.py  test_map_result_actions.py  test_map_shortcuts.py  test_mapped_decorator.py  test_mapper.py  test_mapper_directories_exist.py  test_mapper_with_mock_htcondor.py  test_maps.py  test_module_level_shortcuts.py  test_options.py  test_reconstruct_result.py  test_recover.py  test_recover_result.py  test_remove_map.py  test_rename_map.py  test_rerun.py  test_settings.py  test_zip_args_and_kwargs.py  travis.sh
tests/_inf/: .htmaprc  Dockerfile  condor_config.local  entrypoint.sh  travis.sh
tests/cli/: conftest.py  test_clean.py  test_components.py  test_edit.py  test_errors.py  test_reasons.py  test_remove.py  test_rerun.py  test_status.py  test_stderr.py  test_stdout.py  test_stdout_and_stderr.py  test_tags.py  test_version.py  test_wait.py
tests/integration/: test_automatic_file_transfer.py  test_checkpointing.py  test_error_handling.py  test_errors_and_holds.py  test_execute_environment.py  test_held_components.py  test_inherited_options.py  test_input_files.py  test_late_materialization.py  test_load.py  test_management.py  test_map_actions.py  test_map_builder.py  test_map_failure.py  test_map_stdout_and_stderr.py  test_maps.py  test_maps_are_singletons.py  test_output_files.py  test_remove_map.py  test_rename_map.py  test_rerun.py  test_retag.py  test_transient_maps.py  test_usage_tracking.py  test_widgets.py
tests/unit/: conftest.py  test_base_descriptors.py  test_delivery_method_base_descriptors.py  test_delivery_method_setup.py  (+15 more)
(+51 files in other folders)
