[metadata]
name = htmap
version = 0.6.0
author = Josh Karpel
author_email = josh.karpel@gmail.com
description = High-Throughput Computing in Python, powered by HTCondor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/htcondor/htmap
license = ASL 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing

[options]
packages =
    htmap
    htmap.run
python_requires = >=3.6
include_package_data = True
install_requires =
    htcondor >= 8.8
    cloudpickle ~= 1.4
    toml ~= 0.10
    tqdm ~= 4.46
    click ~= 7.0
    click-didyoumean
    halo
    importlib-metadata ~= 1.0; python_version < "3.8"

[options.extras_require]
tests =
    pytest
    pytest-mock
    pytest-xdist
    pytest-timeout
    pytest-watch
    pytest-profiling
    coverage
    pytest-cov
    codecov
    pre-commit
docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autodoc_typehints
    pygments-github-lexers
    ipython
    nbsphinx
    nbstripout
    sphinx-click
    sphinx-issues
    sphinx-autobuild

[options.entry_points]
console_scripts =
    htmap = htmap.cli:cli

[options.package_data]
* =
    *.sh
    *.bat

[bdist_wheel]
universal = 1
