[metadata]
name = htmap
version = 0.6.1
description = High-Throughput Computing in Python, powered by HTCondor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/htcondor/htmap
author = Josh Karpel
author_email = josh.karpel@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing

[options]
packages =
    htmap
    htmap.run
install_requires =
    click>=8.0
    click-didyoumean>=0.0.3
    cloudpickle>=1.4
    halo>=0.0.30
    htcondor>=8.8
    toml>=0.10
    tqdm>=4.46
    importlib-metadata>=1.0;python_version < "3.8"
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    htmap = htmap.cli:cli

[options.extras_require]
docs =
    ipython
    nbsphinx
    nbstripout
    pygments-github-lexers
    sphinx
    sphinx-autobuild
    sphinx-click
    sphinx-issues
    sphinx_autodoc_typehints
    sphinx_rtd_theme
tests =
    codecov
    coverage
    pre-commit
    pytest>=6
    pytest-cov
    pytest-mock
    pytest-profiling
    pytest-timeout
    pytest-watch
    pytest-xdist
widgets =
    ipywidgets
    jupyterlab>=2

[options.package_data]
* =
    *.sh
    *.bat

[bdist_wheel]
universal = 1
